--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -1,9 +1,23 @@
-.Half{
-   
- }
  .Hhalf{
     background-color: red;
     /* background-image: url(https://images.unsplash.com/photo-1577495508048-b635879837f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80);  */
      background-image: url(./Assets/RegisterPage1.png);
      background-size: contain;
+ }
+
+ .form-input{
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border-bottom: 1px solid #E1E6EF;
+ }
+ .form-input:focus{
+   border-bottom: 2px solid #0539B4;
+ }
+ .ent-btn{
+   background: #0539B4;
+ }
+ .welcome{
+   font-size: 40px;
+   font-weight: 600;
  }
