--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,10 +23,22 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
+
+.icon-span{
+  display: flex;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-bottom: 10px;
+}
+
+.tracker-box .validated{
+  color: #e7e5e;
+}
+
 
 @keyframes App-logo-spin {
   from {
