--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -1,15 +1,19 @@
- .Hhalf{
-    background-color: red;
-    /* background-image: url(https://images.unsplash.com/photo-1577495508048-b635879837f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80);  */
-     background-image: url(./Assets/RegisterPage1.png);
-     background-size: contain;
+ .login-half{
+  background-image: url(https://img.freepik.com/free-photo/top-view-diverse-people-hands-holding-together-circle-hands-stack_93675-134815.jpg?w=740&t=st=1675708679~exp=1675709279~hmac=e3d1e0bac9aaafc0af4f8f520d1676b244e5f4260a0274c192b2892af965cfdb);
+     background-size: cover;
+ }
+
+ .register-half{
+  background-image: url(./Assets/RegisterPage1.png);
+  background-size: cover;
+
  }
 
  .form-input{
     width: 100%;
     padding: 10px;
     outline: none;
-    border-bottom: 1px solid #E1E6EF;
+    border-bottom: 1px solid #b7b9bc;
  }
  .form-input:focus{
    border-bottom: 2px solid #0539B4;
