--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,6 +77,16 @@ button[disabled]{
 	cursor: pointer;
 }
 
+.form-inputt {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border-bottom: 2px solid #b7b9bc;
+}
+.form-input:focus {
+  border-bottom: 2px solid #0539b4;
+}
+
 .hamburger {
 	position: relative;
 	top: calc(50% - 2px);
