--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,7 +88,7 @@ button[disabled]{
   border-bottom: 2px solid #0539b4;
 }
 
-.form-input-d {
+/* .form-input-d {
   width: 100%;
   padding: 10px;
   outline: none;
@@ -97,7 +97,7 @@ button[disabled]{
 }
 .form-input:focus {
   border-bottom: 2px solid #0539b4;
-}
+} */
 .hamburger {
 	position: relative;
 	top: calc(50% - 2px);
