--- a/frontend/src/pages/Community/Dashboard/Newdashboard.css
+++ b/frontend/src/pages/Community/Dashboard/Newdashboard.css
@@ -170,6 +170,21 @@ main .recent-orders table {
   text-align: right;
 }
 
+/* .right .top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-items: center;
+  padding: 0 0.8rem;
+  height: 4.6rem;
+  background: var(--color-white);
+  width: 100%;
+
+  margin: 0;
+  z-index: 2;
+  box-shadow: 0 1rem 1rem var(--color-light);
+} */
+
 /* MEDIA qUERIES  */
 @media screen and (max-width: 1200px) {
   .container {
